proj1/tests/backup-test/error/ast-and-or-error.py
1 and and 1
2 or or 2
